tests/inputs/invalid/types/bad_vars/bad_assignment.crbc
routine main () : integer is 
    
    var x : real is 2 + 3;

    print(x);

    return 0;
end